test/string/unterminated.lox
// error: non-terminated string
"this string has no close quote